feat: make backend production-ready and secure for Render deployment
- Remove all hardcoded secrets from application.properties
- Make all configuration environment-driven (DB, JWT, Twilio, Mail, CORS)
- Update SecurityConfig to use environment-driven CORS patterns
- Remove hardcoded PORT from Dockerfile (Render provides it)
- Ensure PostgreSQL dialect and driver are used for production
- All sensitive data now comes from environment variables